--- a/src/pages/AuthPage/AuthPage.css
+++ b/src/pages/AuthPage/AuthPage.css
@@ -1,5 +1,5 @@
 .bodyDiv{
-    background-image: linear-gradient(#FFBC97,#ce6101bb );
+    background-image: linear-gradient(#88D6E7,#b1703763 );
     min-height: 100%;
     min-width: 1024px;
     width: 100%;
