Add Appointment to database

--- a/src/components/ServiceCard/ServiceCard.css
+++ b/src/components/ServiceCard/ServiceCard.css
@@ -1,6 +1,54 @@
-.serviceCardDiv{
-    box-shadow: 2px 4px 8px 0 black;
-    margin:30px;
-    padding: 30px;
-    border-radius: 30px;
-}
+
+.flip-card {
+    background-color: transparent;
+    width: 450px;
+    height: 300px;
+    margin: 10px;
+    perspective: 1000px; 
+    border-radius: 20px;
+  }
+
+  .flip-card-inner {
+    position: relative;
+    width: 450px;
+    height: 300px;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+    border-radius: 20px;
+  }
+  
+
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+    border-radius: 20px;
+  }
+  
+
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 450px;
+    height: 300px;
+    -webkit-backface-visibility: hidden; 
+    backface-visibility: hidden;
+    border-radius: 20px;
+    box-shadow: 3px 3px 3px black;
+  }
+  
+  .flip-card-front {
+    color: black;
+    width: 450px;
+    height: 300px;
+    font-family: 'Brush Script MT', cursive;
+    font-size: 40px;
+    text-align: center;
+    background: linear-gradient(#b9b9b9 ,#2b1c1f);
+  }
+  
+  .flip-card-back {
+    background-color: #2f3d49;
+    color: white;
+    font-size: 20px;
+    transform: rotateY(180deg);
+    border-radius: 20px;
+  }
