--- a/src/pages/AuthPage/AuthPage.css
+++ b/src/pages/AuthPage/AuthPage.css
@@ -1,5 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+.AuthH1{
+    font-family: 'Satisfy', cursive;
+    font-size: 60px;
+    text-shadow: 3px 2px 2px black;
+}
 .bodyDiv{
-    background-image: linear-gradient(#88D6E7,#b1703763 );
+    background-image: linear-gradient(#eeeeee,#d1d1d163 );
     min-height: 100%;
     min-width: 1024px;
     width: 100%;
@@ -9,8 +15,117 @@
     left: 0;
 }
 .AuthDiv{
-    margin-top: 20vmin;
+
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
+/* Got animation from https://bbbootstrap.com/snippets/bootstrap-5-fancy-login-form-bubble-animations-66246499 */
+/* Modified and added according to my needs */
+.bubbles {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow:visible;
+}
+
+
+.circle {
+    position: absolute;
+    z-index: -100;
+    border-radius: 50%;
+    background-color: rgb(252, 149, 149);
+    animation: flying 7s infinite ease-in;
+    bottom: -100px
+}
+
+@keyframes flying {
+    0% {
+        bottom: -100px;
+        transform: translateX(0)
+    }
+
+    50% {
+        transform: translateX(100px)
+    }
+
+    100% {
+        bottom: 1080px;
+        transform: translateX(-250px)
+    }
+}
+
+.circle:nth-child(1) {
+    width: 60px;
+    height: 60px;
+    left: 20%;
+    background-color: blueviolet;
+    animation-delay: 5s
+}
+
+.circle:nth-child(2) {
+    width: 100px;
+    height: 100px;
+    left: 40%;
+    background-color:rgb(245, 252, 149);
+    animation-delay: 6s
+}
+
+.circle:nth-child(3) {
+    width: 65px;
+    height: 65px;
+    background-color:rgb(149, 252, 192);
+    animation-delay: 4s
+}
+
+.circle:nth-child(4) {
+    width: 80px;
+    height: 80px;
+    background-color:rgb(149, 197, 252);
+    left: 80%;
+    animation-delay: 9s
+}
+.circle:nth-child(5) {
+    width: 80px;
+    height: 80px;
+    background-color:rgb(252, 149, 221);
+    left: 80%;
+    animation-delay: 9s
+}
+.circle:nth-child(6) {
+    width: 80px;
+    height: 80px;
+    background-color:rgb(240, 149, 252);
+    left: 80%;
+    animation-delay: 9s
+}
+.circle:nth-child(7) {
+    width: 80px;
+    height: 80px;
+    left: 80%;
+    background-color:rgb(170, 252, 149);
+    animation-delay: 9s
+}
+.circle:nth-child(8) {
+    width: 80px;
+    height: 80px;
+    left: 80%;
+    background-color:rgb(127, 145, 65);
+    animation-delay: 9s
+}
+.circle:nth-child(9) {
+    width: 80px;
+    height: 80px;
+    left: 80%;
+    background-color:rgb(252, 149, 149);
+    animation-delay: 2s
+}
+.circle:nth-child(10) {
+    width: 80px;
+    height: 80px;
+    left: 80%;
+    background-color:rgb(28, 87, 69);
+    animation-delay: 9s
+}
+
+
