--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 .homeDiv{
     background-image: url('https://media.giphy.com/avatars/premicarsbrasil/u2KS26MQ0SNt.gif');
     width: 100vw;
@@ -5,10 +6,49 @@
     background-size: cover;
     margin-top: 0px;
     padding:0px;
+    position:fixed;
 }
 
-.headlight{
-    margin-left: 135vmin;
-    margin-top: 30vmin ;
-    font-size: 25px;
-}
+.HomeUl {
+    padding: 0;
+    display: block;
+    margin: 24px auto;
+    width: 320px;
+    margin-right: 155vmin;
+  }
+  
+li {
+    padding-top: 10px;
+    padding-bottom: -70px;
+    display: block;
+    height: 72px;
+    font-size: 30px;
+    text-align: center;
+    width: 320px;
+    color: black;
+    text-shadow: 1px 1px 1px black;
+    font-family: 'Satisfy', cursive;
+    background-color: #337786;
+    animation-name: animateIn;
+    border-radius: 30px;
+    animation-duration: 0.8s;
+    animation-delay: 100ms;
+    animation-fill-mode: both;
+    animation-timing-function: ease-in-out;
+    box-shadow: 2px 2px 2px black;
+  }
+  
+  li + li {
+    margin-top: 10px;
+  }
+  
+  @keyframes animateIn {
+    0% {
+      opacity: 0;
+      transform: scale(0.6) translateY(-8px);
+    }
+    
+    100% {
+      opacity: 1;
+    }
+  }
