--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -28,7 +28,7 @@ li {
     color: black;
     text-shadow: 1px 1px 1px black;
     font-family: 'Satisfy', cursive;
-    background-color: #337786;
+    background-color: #79cee0;
     animation-name: animateIn;
     border-radius: 30px;
     animation-duration: 0.8s;
