--- a/src/components/ServiceCard/ServiceCard.css
+++ b/src/components/ServiceCard/ServiceCard.css
@@ -36,13 +36,14 @@
   }
   
   .flip-card-front {
+
     color: black;
     width: 450px;
     height: 300px;
     font-family: 'Brush Script MT', cursive;
     font-size: 40px;
     text-align: center;
-    background: linear-gradient(#8f8f8f ,#ffffff);
+    background: linear-gradient(#bbbbbb ,#ffffff);
   }
   
   .flip-card-back {
